# picoEEPROM

./: .gitignore  CMakeLists.txt  README.md
include/: eeprom.h  io.h
pio/: bus.pio
scripts/: compile_tests.sh  generate_rom_header.sh
src/: main.cpp
src/eeprom/: eeprom.cpp
src/io/: io.cpp
tests/: bin1.s  nop_test.s
